<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiagnosisActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_select_your_symptoms"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/chek_fever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/fever" />

            <CheckBox
                android:id="@+id/chek_headache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/severe_headache" />

            <CheckBox
                android:id="@+id/chek_diarhea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/diarhea" />

            <CheckBox
                android:id="@+id/chek_fatigue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/fatigue" />

            <CheckBox
                android:id="@+id/chek_vomiting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/nausea_and_vomiting" />

            <CheckBox
                android:id="@+id/chek_muscle_pain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/muscle_pain" />

            <CheckBox
                android:id="@+id/chek_chills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/chills" />

            <CheckBox
                android:id="@+id/chek_abdominal_pain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/abdominal_pain" />

            <CheckBox
                android:id="@+id/chek_vision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/blurred_vision" />

            <CheckBox
                android:id="@+id/chek_swollen_face"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/swollen_feet_hands_and_face" />

            <CheckBox
                android:id="@+id/chek_urinating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/difficulty_urinating" />

            <CheckBox
                android:id="@+id/chek_pain_below_ribs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/pain_below_the_ribs" />

            <CheckBox
                android:id="@+id/chek_heartburn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/heartburn" />

            <CheckBox
                android:id="@+id/chek_rapid_heartbeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/rapid_heartbeat" />

            <CheckBox
                android:id="@+id/chek_vaginal_bleeding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/vaginal_bleeding_at_20_weeks" />

            <CheckBox
                android:id="@+id/chek_abdominal_cramps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/abdominal_cramps" />

            <CheckBox
                android:id="@+id/chek_back_pain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/back_pain" />

            <CheckBox
                android:id="@+id/chek_clotted_discharge_vaginal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/clotted_discharge_from_the_vaginal" />

            <CheckBox
                android:id="@+id/chek_pain_right_side_abdominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/pain_on_the_right_side_of_the_abdominal" />

            <Button
                android:id="@+id/btn_diagnosis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/submit" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>